# agentgraph

./: .gitignore  Cargo.toml
agentgraph-core/: Cargo.toml
agentgraph-core/src/: lib.rs
agentgraph-core/src/completion/: client.rs  mod.rs  tracing.rs
agentgraph-core/src/graph/: core.rs  edges.rs  tests.rs
agentgraph-core/src/node/: context.rs  core.rs  function.rs  method.rs  mod.rs  tests.rs
agentgraph-core/src/tool/: mod.rs
agentgraph-core/src/types/: error.rs  mod.rs  result.rs  state.rs  tests.rs
agentgraph-core/tests/: completion_tests.rs  graph_tests.rs  tool_tests.rs  tools_tests.rs
agentgraph-macros/: Cargo.toml
agentgraph-macros/src/: lib.rs  tool.rs  tools.rs
agentgraph-macros/src/state/: mod.rs  state.rs
agentgraph-macros/src/tool/: mod.rs  tool.rs
agentgraph-macros/src/tools/: mod.rs  tools.rs
examples/: completion_sync.rs
examples/agent/: Cargo.toml
examples/agent/src/: main.rs
examples/completion/: Cargo.toml
examples/completion-sync/: Cargo.toml
examples/completion-tools/: Cargo.toml
examples/completion-tools/src/: main.rs
examples/completion/src/: main.rs
examples/tools/: Cargo.toml
examples/tools/src/: main.rs
src/: lib.rs
src/completion/: client.rs  mod.rs  tracing.rs
src/graph/: core.rs  marker.rs  mod.rs  node.rs  state.rs
src/node/: config.rs  core.rs  mod.rs
src/tool/: mod.rs
src/types/: error.rs  message.rs  mod.rs  result.rs  state.rs  tests.rs
tests/: completion_tests.rs  graph_tests.rs  tool_tests.rs  tools_tests.rs
