[package]
name = "agentgraph"
version = "0.1.0"
edition = "2021"
authors = ["Ryan Sanna <ryansann@umich.edu>"]
description = "A framework for building stateful, multi-actor applications with LLMs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ryansann/agentgraph"
keywords = ["llm", "ai", "agent", "graph", "workflow"]
categories = ["ai", "algorithms", "asynchronous"]

[dependencies]
agentgraph-macros = { path = "./agentgraph-macros" }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1", optional = true }
async-trait = "0.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
futures = "0.3"
anyhow = "1.0"
async-openai = "0.26.0"
uuid = { version = "1.11.0", features = ["v4"] }
async-stream = "0.3.6"
chrono = "0.4.39"
reqwest = "0.12.9"
proc-macro2 = "1.0.92"
quote = "1.0.37"
syn = "2.0.91"
schemars = "0.8"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
mockall = "0.11"

[features]
default = []
persistence = ["tokio/fs"]
streaming = ["tokio-stream"]
