# agentgraph-macros/Cargo.toml
[package]
name = "agentgraph-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
agentgraph-core = { path = "../agentgraph-core" }
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
serde_json = "1.0"
convert_case = "0.6"
