[package]
name = "agent"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
agentgraph-core = { path = "../../agentgraph-core" }
agentgraph-macros = { path = "../../agentgraph-macros" }
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-openai = "0.26.0"
schemars="0.8"
