[package]
name = "tools"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
agentgraph-macros = { path = "../../agentgraph-macros" }
agentgraph-core = { path = "../../agentgraph-core" }
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
